Update with reactive testing